Fix horizontal scrolling

--- a/code/index.css
+++ b/code/index.css
@@ -167,7 +167,6 @@ pre {
         border-radius: 0.5em;
         overflow: auto;
 
-        white-space: pre-wrap;
         text-align: left;
         tab-size: 2;
 
@@ -250,11 +249,13 @@ dd {
 /**** Tables **********************************************************************************************************/
 
 table {
+    display: block; /* enable horizontal scrolling */
     width: 100%;
     border-collapse: collapse;
     margin-top: 1em;
     margin-bottom: 1em;
     font-size: 95%;
+    overflow-x: auto;
 }
 
 table tr > th:last-child {
